--- a/views/pokemon.hbs
+++ b/views/pokemon.hbs
@@ -8,14 +8,19 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./css/style.css">
-<script src="./js/list.js"></script>
+<script src="./js/list.js" defer></script>
     </head>
 
     <body>
+
+        <input type="text" name="poke" id="poke">
+        <button id="pokebutton">Submit</button>
+
         <h1>{{pokemon}}</h1>
 
-<h1>Moves</h1>        
+<h1>Moves</h1>      
 
+<div style="display: flex;width:100%">
 <ul>
    {{#each moves}}
     <li class="move">{{move.name}}</li>
@@ -23,6 +28,9 @@
 </ul>
      
 
-        <img src={{image}} alt="Pikachu">
+        <img style="margin-left: 100px;" height="500px" src={{image}} alt="Pikachu">
+</div>
+
+
     </body>
 </html>
